--- a/JODevelop/Test/Transition/TransitionList.plist
+++ b/JODevelop/Test/Transition/TransitionList.plist
@@ -26,5 +26,11 @@
 		<key>vc</key>
 		<string>FilterListVC</string>
 	</dict>
+	<dict>
+		<key>name</key>
+		<string>SlideAnimator</string>
+		<key>vc</key>
+		<string>SlideOneVC</string>
+	</dict>
 </array>
 </plist>
