--- a/JODevelop/Info.plist
+++ b/JODevelop/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSContactsUsageDescription</key>
+	<string>请求访问通讯录</string>
+	<key>NSCameraUsageDescription</key>
+	<string>允许使用照相机</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>语音</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
