--- a/JODevelop/ItemList.plist
+++ b/JODevelop/ItemList.plist
@@ -62,5 +62,11 @@
 		<key>vc</key>
 		<string>MoviesVC</string>
 	</dict>
+	<dict>
+		<key>name</key>
+		<string>Promise</string>
+		<key>vc</key>
+		<string>PromiseTestVC</string>
+	</dict>
 </array>
 </plist>
